--- a/ani.html
+++ b/ani.html
@@ -35,11 +35,7 @@
     <header class="header">
         <nav>
 
-            <!--
-            <a href="index.html#logo" class="logo">
 
-            </a>
--->
 
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
@@ -48,7 +44,8 @@
                 <li> <a href="index.html" class="logo1"><img src="billeder/1Logo.jpg" alt="logo"></a></li>
                 <li><a href="web.html">WEB</a></li>
                 <li><a href="ux.html">UX</a></li>
-                <li> <a href="ani.html">ANIMATION</a></li>
+                <li> <a href="ani.html"><u>ANIMATION</u></a>
+                </li>
                 <li> <a href="content.html">INDHOLD</a></li>
                 <li> <a href="cv.html">CV</a></li>
             </ul>
@@ -76,24 +73,40 @@
         </div>
         <div class="col">
             <div class="text">
-                <p>I temaets anden del, fik vi til opgave at lave endnu et spil, denne gang i gruppe.<br>
-                    Denne gang fik vi en case, hvor spillet vi i gruppen skulle udvikle, skulle være en del af en kampagne fra Sex og Samfund, med emnet Billeddeling.<br><br>
-                    Til forskel fra vores første spil, skulle vi denne gang brugerteste vores idé og illustrationer på målgruppen, så vi var sikre på, at få et produkt der ville hjælpe teenagere med, at forstå budskabet. Vi lavede derfor, et semistruktureret interview med en teenager, som hjalp os med, at få en større forståelse af, hvad der manglede eller hvad teenageren mente, ville være let at forstå og skabe et underholdende spil for andre i deres målgruppe. Interviewet af teenageren blev lavet i starten af processen, for at spore os ind på et designvalg, der kunne henvende sig til målgruppen, som var folkeskoleelever i alderen 13-15 år.</p>
+                <p>I temaets <i>Grundlæggende Animation</i> fik vi stillet til opgave, at skabe to spil - et individuelt og et i gruppe. Gruppespillet blev baseret på en case, hvor spillet som skulle udvikles var en del af en kampagne
+                    fra <i>Sex og Samfund</i> omkring emnet <i>Billeddeling</i>.<br>
+                    Til forskel fra vores første spil, har vi denne gang brugertestet vores idé og illustrationer på
+                    målgruppen, for at sikre et produkt som ville hjælpe teenagere med at forstå spillets budskab. Vi
+                    lavede derfor et semistruktureret interview med en fra målgruppen (teenager mellem 13-15 år), for at få en større
+                    forståelse af, hvad spillet kunne mangle og hvad målgruppen oplever som let at forstå, samt skabe
+                    et underholdende spil for målgruppen.
+
+                    Interviewet med informanten blev lavet i starten af processen, for at spore os ind på et designvalg,
+                    der kunne henvende sig til målgruppen, som var folkeskoleelever i alderen 13-15 år.</p>
                 <div class="button"> <a href="http://josefinececilie.dk/kea/04_animation/04_04_01_gruppe_4/index.html">Prøv spil</a></div>
 
             </div>
 
             <div class="text">
 
-                <p>Løbende blev vi introduceret for scrum begrebet, samt trello-boards og burn-down-charts, som kunne hjælpe os med, at nå vores mål, samt få et overblik over de mangler og problemer vi havde løbende i forløbet. Dette gav en struktureret tilgang til projektet, fra alles side.<br><br>
-                    I denne opgave, benyttede vi os igen af aktivitets - og statemachine diagrammer, hvilket hjalp os, med et mere struktureret overblik over vores kode til spillet. </p>
+                <p>Løbende blev vi introduceret for scrum begrebet, samt trello-boards og burn-down-charts, som
+                    kunne hjælpe os med at nå vores mål, samt få et overblik over de mangler og problemer vi havde
+                    løbende i forløbet. Dette gav en struktureret tilgang til projektet, fra alles side.<br>
+                    I denne opgave, benyttede vi os af aktivitets - og statemachine-diagrammer, som gav et
+                    struktureret overblik over vores kode til spillet. </p>
             </div>
             <div class="text">
 
-                <p> Vores spil har til formål at oplyse omkring billeder, der ikke må deles. Vi har derfor valgt, at bygge vores spil op som quiz, hvor man skal svare på, hvilke billeder der ville være passende, at dele online. Herudover, har vi valgt, at sætte både tid og point på spillet, så det blev mere ‘spil’ agtigt, og ikke bare var en quiz, så vi lettere ville holde målgruppens opmærksomhed og få dem til, at prøve spillet igen. <br><br>
+                <p> Vores spil har til formål at oplyse og skabe bevidsthed omkring billeder, der ikke må deles online.
+                    Vi har derfor valgt at bygge vores spil op som en quiz, hvor man skal svare på, hvilke billeder som
+                    ville være passende at dele online. Herudover har vi valgt at sætte både tid og point på spillet, så
+                    det blev mere ‘spil’-agtigt, og ikke kun var en quiz, for at fastholde målgruppens opmærksomhed
+                    og få dem til at prøve spillet igen.<br><br>
 
-                    Vi valgte, at tage udgangspunkt i det minimalistiske flatdesign, da den skaber en overskuelig måde at oplyse og fremvise budskabet.<br>
-                    I vores farvevalg, har vi gjort brug af nedtonede og støvede farver, for at skabe en mere rolig atmosfære i spillet, dog med nogle stærke farver, for at skabe kontrast ved de ønskede motiver.
+                    Vi har valgt at tage udgangspunkt i det minimalistiske flatdesign, da det skaber en overskuelig
+                    måde at oplyse og fremvise budskabet.<br>
+                    I vores farvevalg har vi gjort brug af nedtonede og støvede farver, for at skabe en mere rolig
+                    atmosfære i spillet, dog med nogle stærke farver, for at skabe kontrast ved de ønskede motiver.
                 </p>
                 <div class="button"> <a href="http://josefinececilie.dk/kea/04_animation/gruppe_4_dokumentationssite/">Se dokumentation</a></div>
 
@@ -114,9 +127,16 @@
 
         <div class="col">
             <div class="text">
-                <p>I temaet “Grundlæggende animation” skulle vi individuelt lave et spil fra bunden.<br>
-                    Vi skulle til start, selv komme på en idé og udfra vores idé skitsere de elementer og karakterer der skulle være en del af vores spil, samt skabe et moodboard for, at skabe et udgangspunkt og stilforståelse i vores elementer.<br>
-                    Efter at have været igennem forkellige idéer til stil på spillet, udvalgte jeg en specifik stil og gik igang med at tegne i Adobe Illustrator, hvor jeg anvendte vektorgrafik, for at sikre at grafikken skallerede korrekt på alle skærme uden at blive pixelerede. I spillet skulle der indgå karakterer, UI-elementer og en baggrund. Vi lærte i denne del om farvelærer og hvordan kontrast- og komplementær farver skaber dynamik i billedet. Til sidst skulle vi skabe et interaktivt og fungerende spil, hvor man kunne trykke på forskellige ‘gode’ og ‘dårlige’ elementer. </p>
+                <p>I temaet <i>Grundlæggende animations</i> individuelle opgave, har jeg lavet et spil fra bunden.
+                    Spillet er bygget på en original idé og med baggrund i ideen, er spillets elementer og karakterer
+                    skitseret, samt udarbejdet et moodboard for at etablere et udgangspunkt og skabe stilforståelse i
+                    elementerne.<br>
+                    Efter en proces hvor jeg har arbejdet med forskellige idéer til stil i spillet, har jeg udvalgt en specifik
+                    stil, som jeg har tegnet i <i>Adobe Illustrator.</i> Her har jeg anvendt <i>vektorgrafik,</i> for at sikre at grafikken
+                    skalerer korrekt på alle skærme uden at blive pixeleret. I spillet har der skulle indgå karakterer, UI-
+                    elementer og en baggrund. I forløbet har farvelære indgået og hvorledes kontrast- og
+                    komplementær farver skaber dynamik i billedet. Til sidst er der skabt et interaktivt og fungerende
+                    spil, hvor man kan trykke på forskellige ‘gode’ og ‘dårlige’ elementer. </p>
                 <div class="button"> <a href="http://josefinececilie.dk/kea/04_animation/spil_v2/index.html">Prøv spil</a><br></div>
                 <div class="button"> <a href="http://josefinececilie.dk/kea/04_animation/spil/assets/">Se assetsliste</a></div>
 
@@ -125,8 +145,11 @@
 
             <div class="text">
 
-                <p> Vi blev løbende undervist og præsenteret for javascript, som er et programmeringssprog der går ind og lytter på brugerens handlinger, og er med til at skabe et interaktivt site.<br>
-                    Herudover, blev vi introduceret til aktivitetsdiagrammer, statemachine diagrammer og hvordan vi kunne kode udfra disse diagrammer, så det gav et større og lettere overblik over, hvordan der blev skabt et godt userflow i spillet, samt hjælp til, hvordan spillet skulle programmeres. </p>
+                <p> Vi er løbende blevet undervist og præsenteret for javascript, som er et programmeringssprog der
+                    går ind og lytter på brugerens handlinger, og er med til at skabe et interaktivt site.<br>
+                    Herudover har der været introduktion til aktivitetsdiagrammer, statemachine-diagrammer og
+                    kodning ud fra disse, så det giver et større og lettere overblik over, hvordan der skabes et godt
+                    userflow i spillet, samt hjælp til, hvordan spillet programmeres. </p>
                 <div class="button"> <a href="04_03_04_Animation_%E2%80%8Bjosefine_cecilie_larsen.pdf">Se dokumentation</a></div>
 
 
