--- a/content.html
+++ b/content.html
@@ -33,11 +33,7 @@
     <header class="header">
         <nav>
 
-            <!--
-            <a href="index.html#logo" class="logo">
 
-            </a>
--->
 
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
@@ -47,7 +43,7 @@
                 <li><a href="web.html">WEB</a></li>
                 <li><a href="ux.html">UX</a></li>
                 <li> <a href="ani.html">ANIMATION</a></li>
-                <li> <a href="content.html">INDHOLD</a></li>
+                <li> <a href="content.html"><u>INDHOLD</u></a></li>
                 <li> <a href="cv.html">CV</a></li>
             </ul>
         </nav>
@@ -77,30 +73,51 @@
         </div>
         <div class="col">
             <div class="text">
-                <p>Under temaet <i>Grundlæggende indhold</i> fik vi til opgave, at finde en virksomhed der kunne trænge til en opfriskning af deres site og sidens indhold. I denne opgave skulle vi skabe et nyt site, billedmateriale og videomateriale der passede til vores site, og viste den identitet vi ønskede at få frem hos virksomheden.<br><br>
+                <p>Under temaet <i>Grundlæggende indhold</i> fik vi til opgave at finde en virksomhed som havde brug for
+                    en opfriskning af deres site og indhold. I denne opgave skulle vi skabe et nyt site, billedmateriale
+                    og videomateriale der passede til sitet, og dermed vise den identitet vi har ønsket at få frem hos
+                    virksomheden.<br><br>
 
-                    Under temaet blev vi introduceret til GitHub, som gjorde det muligt for alle i gruppen, at arbejde i samme brackets dokument, hvilket gjorde det mere simpelt, at samarbejde, samt alle få en grundforståelse for den kode vi udarbejdede.
+                    Vi har arbejdet med <i>GitHub</i>, som har gjort det muligt for alle i gruppen at arbejde i samme brackets
+                    dokument. Det har gjort det lettere at samarbejde omkring kodningen, samt givet mulighed for at alle fik en grundforståelse for den
+                    kode vi udarbejdede.
                 </p>
 
                 <div class="button"> <a href="http://josefinececilie.dk/kea/05_03_01a_gruppe13/index.html">NW gallery site</a></div>
 
             </div>
             <div class="text">
-                <p>Herudover, blev vi introduceret til flere testformer:<br><br>
-                    <b>BERT-test</b> (Bipolar emotional response testing). Som kort går ud på, at få subjektive holdninger fra brugeren om designet eller indholdet på sitet.<br><br>
-                    <b>5-sekunders test</b> Denne test går ud på, at få testpersonens førstehåndsindtryk af sitet, og om man opfatter siden formål og koncept, så snart man åbner den.<br><br>
-                    Og til sidst: <b>Heuristisk-test</b> Hvilket er en test, hvor man får en eksperts perspektiv. Eksperten vil her, gennemgå siden, og se det fra brugerens øje, for at finde frem til hvad der kunne være af mangler og krav, for at skabe et fuldendt brugervenlighed.
+                <p>Herudover er vi introduceret til flere testformer:<br>
+                    <b>BERT-test</b> (Bipolar emotional response testing) Som kort går ud på, at få subjektive holdninger fra
+                    brugeren om designet eller indholdet på sitet.
+                    <br><b>5-sekunders test</b> Denne test går ud på, at få testpersonens førstehåndsindtryk af sitet, og om man
+                    opfatter sitets formål og koncept, så snart man åbner den.
+                    <br>
+                    Og til sidst: <b>Heuristisk-test</b> Dette er en test, hvor man får en eksperts perspektiv. Eksperten vil her
+                    gennemgå siden, og se det med brugerens øje, for at finde frem til hvad der kunne være af
+                    mangler og krav med henblik på at skabe en fuldendt brugervenlighed.
 
                 </p>
                 <div class="button"> <a href="http://josefinececilie.dk/kea/05_indhold/05_03_01_gruppe13/index.html">Se dokumentation</a></div>
             </div>
             <div class="text">
-                <p>Vi valgte i vores gruppe, at redesigne <i>NW Gallery</i>, hvilket er et fotogalleri i Nansensgade. Hos NW Gallery har Nina Worren - ejeren af galleriet - særligt fokus på det kunstneriske og personlige fotografi. <br>
-                    Vi startede ud, med at have lave et kort interview med Nina Worren, for at få et billede af hvad virksomheden identitet var, og hvad hun havde af planer og tanker for sin virksomhed. Her gik det hurtigt op for os, at hun havde mange planer i mange forskellige retninger, og derfor var det svært, at have finde den klare identitet, hvilket derfor var vores hovedfokus i opgaven, at fremvise og klargøre for de brugere der ville bruge sitet. <br><br>
-                    Det gjorde vi, ved at lave en mere overskuelig og clean side - som vi desværre aldrig fik færdiggjort- vi holdt os de lyse farver og nuancer, her særligt et fokus på hvid og lysgrå, men med skrå linjer imellem hver del på sitet. Dette element inddrog vi, for at skabe en kontrast til, de eller lige linjer der kan være i fotografierne på væggen. <br>
-                    Ved vores indholdsmateriale, skabte vi en video, hvor vi viste hvad NW Gallery er og hvad der er stedets identitet. <br>
-                    Videoen viste galleriejeren Nina Worren og hendes sted. <br>
-                    Til redigering af videoen benyttede vi Adobe Premiere pro, og forskellige klippe- og filmteknikker vi havde lært igennem undervisningsforløbet.
+                <p>Vi valgte i vores gruppe, at redesigne NW Gallery, hvilket er et fotogalleri i Nansensgade. Hos NW
+                    Gallery har Nina Worren - ejeren af galleriet - særligt fokus på det kunstneriske og personlige
+                    fotografi.
+                    Vi startede ud med at have lave et kort interview med Nina Worren, for at få et billede af hvad
+                    virksomhedens identitet var, og hvad hun havde af planer og tanker for sin virksomhed. Det gik
+                    hurtigt op for os, at hun havde mange planer i mange forskellige retninger, og det var svært, at
+                    have finde en klar identitet. Derfor har vores hovedfokus i opgaven været at forsøge at tydeliggøre
+                    virksomhedens identitet, så den fremstod klar for de brugere, der ville benytte sitet.
+                    Det gjorde vi ved at lave en mere overskuelig og clean side, som endnu ikke er endeligt klar. Vi har
+                    valgt at bruge lyse farver og nuancer med særligt fokus på hvid og lysegrå, samt skrå linjer imellem
+                    hver del på sitet. Dette element inddrog vi for at skabe kontrast til de horisontale og vertikale lige
+                    linjer, som fotografiernes form skaber i et fotogalleri.
+                    I forbindelse med udarbejdelse af indholdsmateriale lavede vi en video, for at skabe en audiovisuel
+                    fortælling om NW Gallery og stedets identitet. Videoen viste galleriejeren Nina Worren og hendes
+                    sted.
+                    Til redigering af videoen benyttede vi Adobe Premiere pro, og forskellige klippe- og filmteknikker vi
+                    har lært gennem undervisningsforløbet.
 
                 </p>
             </div>
@@ -112,7 +129,7 @@
         <div class="col_bottom">
             <div class="video">
 
-                <video width="" poster="thumbnail.png" controls>
+                <video width="400" poster="thumbnail.png" controls>
                     <source src="nw_gallery_nina_worren.mp4" type="video/mp4">
                 </video>
             </div>
