--- a/ux.html
+++ b/ux.html
@@ -40,7 +40,7 @@
 
                 <li> <a href="index.html" class="logo1"><img src="billeder/1Logo.jpg" alt="logo"></a></li>
                 <li><a href="web.html">WEB</a></li>
-                <li><a href="ux.html">UX</a></li>
+                <li><a href="ux.html"><u>UX</u></a></li>
                 <li> <a href="ani.html">ANIMATION</a></li>
                 <li> <a href="content.html">INDHOLD</a></li>
                 <li> <a href="cv.html">CV</a></li>
@@ -69,13 +69,26 @@
         <div class="col">
             <div class="text">
 
-                <p>Under temaet Grundlæggende UX fik vi til opgave at skabe en prototype til en webshop, der solgte enten kopper, lp’er eller frugt. Jeg valgte at skabe en prototype webshop, der solgte kopper og markedsførte sig i retning af DJ’s og generelt musikinteresserede folk.
+                <p>Under temaet <i>Grundlæggende UX</i> lød opgaven på at skabe en prototype til en webshop, der
+                    solgte enten kopper, lp’er eller frugt. Jeg valgte at skabe en prototype webshop, der solgte kopper
+                    og markedsførte sig i retning af DJ’s og andre musikinteresserede.
                 </p>
 
                 <div class="button"> <a href="https://xd.adobe.com/view/0b421a49-935b-4f98-4cfa-8840f0fc174d-7d73/">Beat mugs prototype</a></div>
             </div>
             <div class="text">
-                <p>Som start på opgaven, researchede jeg diverse webshops - både hvad angik sites, der solgte kopper eller andet nichepræget - for at få en bedre forståelse for, hvordan man skaber et overskueligt købs-flow og et lækkert univers for brugeren. Igennem prototypens design satte jeg fokus på målgruppen, både i forhold til microcopy, UI-konventioner og selve flowet på siden, med henblik på at gøre brugeroplevelsen så overskuelig og simpel for den potentielle kunde. Jeg skabte et prototype website i hvide, sorte og grå nuancer med henblik på at skabe et stilrent site, der passer ind i et univers, der taler til unge musik interesserede mennesker, og samtidig også skabte en sammenhæng mellem selve kopperne (produktet) og prototypens design elementer. I tilblivelsesprocessen af denne prototype blev der lavet ‘tænke højt’ test, hvor det blev foreslået, at lave et element, hvor man ved ‘Thank you for your purchase’ beskeden efter en købssituation fik brugeren tilbage til startsiden, og derved skabte en brødkrumme-sti hele vejen igennem, hvilket blev implementeret efter testen.</p>
+                <p>I indledningsfasen researchede jeg diverse webshops - f.eks. sites der solgte kopper og andet
+                    nichepræget - for at få en bedre forståelse for, hvordan man skaber et overskueligt købs-flow og et
+                    lækkert univers for brugeren. Igennem prototypens design satte jeg fokus på målgruppen, både i
+                    forhold til <i>microcopy, UI-konventioner</i> og selve <i>flowet</i> på siden, og med henblik på at gøre
+                    brugeroplevelsen så overskuelig og simpel for den potentielle kunde. Jeg skabte et
+                    prototypewebsite i hvide, sorte og grå nuancer, med henblik på at skabe et stilrent site, der passer
+                    ind i et univers, der taler til unge musikinteresserede mennesker, og som samtidig skabte en
+                    sammenhæng mellem selve kopperne (produktet) og prototypens designelementer. I
+                    tilblivelsesprocessen af denne prototype blev der lavet <i>tænke højt</i> test, hvor det blev foreslået at
+                    lave et element, hvor man ved <i>‘Thank you for your purchase’ view</i> efter en købssituation, fik
+                    brugeren tilbage til startsiden, og derved skabte en brødkrumme-sti hele vejen igennem, hvilket
+                    blev implementeret efter testen.</p>
             </div>
             <div class="text">
                 <img src="billeder/img_ux/beat.png" alt="kopper">
@@ -86,21 +99,38 @@
 
         </div>
         <div class="col_top">
-            <h2>03.04.01 Design sprint "Kea social"</h2>
+            <h2>03.04.01 Design sprint "KEA social"</h2>
             <hr>
         </div>
         <div class="col">
             <div class="text">
-                <p>Vi skulle i vores anden opgave under temaet Grundlæggende UX, udvikle en app med formålsbeskrivelsen, at det skulle afhjælpe et mangelfuldt område af KEA.<br>
-                    Efter en brainstorming proces, fandt vi kollektivt frem til, at et af de tydeligste mangler hos KEA er en app med platform, der kunne samle forskellige aspekter af KEA oplevelsen ét sted, såsom f. eks diverse events, skemaer, eksamensdage osv. Én app, hvor man let kunne navigere rundt, da mange mente disse informationer var spredt udover mange forskellige informationskilder og steder såsom KEAs hjemmeside, diverse Facebook-sider og/eller grupper.</p>
+                <p>I temaet <i>Grundlæggende UX</i> var den anden opgave at udvikle en app med en formålsbeskrivelse,
+                    der lød på, at det skulle afhjælpe et mangelfuldt område af KEA.<br>
+                    Efter en brainstormingsproces fandt vi kollektivt frem til, at et af de oplagte mangler hos KEA er en
+                    app med en platform, som kan samle forskellige aspekter af KEA-oplevelsen ét sted. Som
+                    eksempelvis diverse events, skemaer og eksamensdage. Én app hvor man let kan navigere rundt.
+                    Dette med udgangspunkt i en fælles oplevelse af at disse informationer er spredt udover mange
+                    forskellige informationskilder og steder, som KEA’s hjemmeside, diverse Facebook-sider og/eller
+                    grupper.</p>
             </div>
             <div class="text">
 
-                <p>Idéen var derfor at udvikle app’en KEA Social, der ville være en app, som kun KEA studerende havde adgang til. Via app’en ville man kunne kommunikere med andre studerende, finde overblik over faglige og sociale events samt finde opslag omkring relevante emner. Vi ønskede at skabe et nemt overblik og en let overskuelig app, så det var simpelt for studerende, at navigere mellem diverse events, samt få hjælp fra andre studerende til enten lektiehjælp eller sågar bare kommunikation om, at tage til fredagsbar med i deres ellers travle hverdag på studiet. </p>
-                <div class="button"> <a href="https://xd.adobe.com/view/7d1546e7-6851-49f2-4fe1-13b5e6428969-0b24/">Kea social prototype</a><br></div>
+                <p>Idéen var derfor at udvikle app’en <i>KEA Social.</i> En app kun KEA studerende har adgang til. Via
+                    app’en vil man kunne kommunikere med andre studerende, finde overblik over faglige og sociale
+                    events, samt finde opslag omkring relevante emner. Ønsket er at skabe et nemt overblik og en
+                    overskuelig app, så det er simpelt for studerende at navigere mellem diverse events, samt få hjælp
+                    fra andre studerende til enten lektiehjælp eller aftaler i den travle hverdag på studiet om f.eks. at
+                    tage om til fredagsbar med ens medstuderende. </p>
+                <div class="button"> <a href="https://xd.adobe.com/view/7d1546e7-6851-49f2-4fe1-13b5e6428969-0b24/">KEA social prototype</a><br></div>
             </div>
             <div class="text">
-                <p>App’en skulle være designet omkring, at man kunne lave en profil, hvor man kunne skrive/krydse sine kompetencer og interesser af, så det blev lettere for folk at socialisere, samt søge den hjælp de ønskede til diverse opgaver og dertil nemmere for app’en at informere om emnerelevante aktiviteter i skolens netværk. Da vi så det som et produkt af KEA, holdt vi app’ens farveskema indenfor KEAs brand farveskema, så det derudover også fungerede som - og føltes som - en direkte forlængelse af KEA’s overordnede site og identitet. Vi benyttede runde og bløde former igennem hele app’en med henblik på at skabe et roligt indtryk for brugeren samt gøre den mere sjov og kreativ i sit feel. </p>
+                <p>App’en er designet omkring muligheden for at oprette en personlig profil, hvor man kan
+                    skrive/krydse sine kompetencer og interesser af, så det er lettere at socialisere med ligesindede,
+                    samt søge den ønskede hjælp til opgaver. <br>For at skabe oplevelsen af et KEA-produkt, er app’ens
+                    farveskema holdt i KEAs brand-farveskema, så det derudover også fungerer - og opleves – som
+                    en direkte forlængelse af KEA’s overordnede site og identitet. Der er benyttet runde og bløde
+                    former igennem hele app’en, med henblik på at skabe et roligt indtryk for brugeren samt gøre den
+                    mere sjov og kreativ i sit feel.</p>
                 <div class="button"> <a href="designsprint_gruppe9.pdf">Design sprint</a></div>
             </div>
 
