--- a/web.html
+++ b/web.html
@@ -39,7 +39,7 @@
             <ul class="menu">
 
                 <li> <a href="index.html" class="logo1"><img src="billeder/1Logo.jpg" alt="logo"></a></li>
-                <li><a href="web.html">WEB</a></li>
+                <li><a href="web.html"><u>WEB</u></a></li>
                 <li><a href="ux.html">UX</a></li>
                 <li> <a href="ani.html">ANIMATION</a></li>
                 <li> <a href="content.html">INDHOLD</a></li>
@@ -55,11 +55,6 @@
     <section id="web_1">
         <img src="billeder/SVG/1.svg" alt="web">
 
-        <!--
-        <div class="wrap">
-            <img src="http://image.flaticon.com/icons/svg/3/3907.svg" id="arrow" class="animated bounce" alt="pil">
-        </div>
--->
         <div class="parallax">
 
         </div>
@@ -69,20 +64,43 @@
         </div>
         <div class="col">
             <div class="text">
-                <p>Under web-temaet fik vi til opgave at skabe et website i en bestemt stilart, og introducerede os samtidig til vi kodesprogene HTML og CSS. Med opgaven blev vi introduceret til forskellige designmæssige stilarter og blev mere bekendt med, hvordan vi kunne arbejde med dem hver især.<br><br>
+                <p>I forbindelse med web-temaet fik jeg til opgave at skabe et website i en bestemt stilart, samt
+                    introduktion til kodesprogene HTML og CSS. Gennem opgaveforløbet er jeg blevet introduceret til
+                    forskellige designmæssige stilarter og er blevet mere bekendt med deres anvendelse og hvordan
+                    der kan arbejdes med dem.<br><br>
 
-                    Under dette tema valgte jeg, at arbejde med stilarten “American Magazine”. Som udgangspunkt udarbejdede jeg et mood-board, baseret på research om denne særegne stilart, der blev defineret i perioden ca. 1933-1965. Begyndelsesvis arbejdede jeg med sort/hvide monokrome farveskemaer, men ændrede det sidenhen til jordfarver og nuancer, og sammenstillede disse med lysere farver, såsom støvet gul samt lyserød, der tydeligt frembragte minder om den tid, som definerede “American Magazine” udtrykket. Websitet blev skabt med det formål at fremvise de tendenser og designelementer, der gjorde stilarten så kendt, den dag i dag.<br><br>
+                    Jeg valgte at arbejde med stilarten “American Magazine”. Som udgangspunkt har jeg udarbejdet et
+                    mood-board, baseret på research om denne særegne stilart, som opstod i perioden ca. 1933-1965.
+                    Begyndelsesvis arbejdede jeg med sort/hvide monokrome farveskemaer, men har sidenhen
+                    ændret det til jordfarver og nuancer og sammenstillet disse med lysere farver: støvet gul samt
+                    lyserød. Dette er gjort for at skabe en stemning, som definerer “American Magazine”-udtrykket.
+                    Websitet er skabt med det formål at fremvise de tendenser og design-elementer, som har gjort
+                    stilarten kendt.<br><br>
 
-                    Jeg benyttede to skrifttyper til sitet; Vogue Regular og Playfair Display. Disse to skrifttyper valgte jeg, da de begge har forskelligt spil i sig, og repræsenterede det klassiske og stilrene “American Magazine” udtryk. Opgaven bestod bl.a. i at arbejde udfra wireframes og layoutdiagrammer, som vi skulle bruge som metodisk redskab til at udarbejde vores site ud fra. <br>Denne metodiske tilgang har hjulpet mig meget i mit arbejde siden hen, da det hjælper med til at give et bedre overblik over, hvordan opsættelsen af diverse HMTL’ers’ parent og child skulle fremstilles, så det fremstår, som ønsket.
+                    Jeg har benyttet to skrifttyper til sitet; Vogue Regular og Playfair Display. Disse to skrifttyper har
+                    jeg valgt, da de begge har forskelligt spil i sig, og repræsenterer det klassiske og stilrene
+                    “American Magazine” udtryk. Opgaven bestod bl.a. i at arbejde ud fra wireframes og
+                    layoutdiagrammer, som metodisk redskab til at udarbejde sitet med. Denne metodiske tilgang har
+                    hjulpet mig i mit arbejde siden hen, da det er medvirker til at skabe bedre overblik over, hvordan
+                    opsættelsen af diverse HMTL’ers’ parent og child skal fremstilles, så det fremstår som ønsket.
                 </p>
                 <div class="button"> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">Gå til American magazine</a></div>
 
 
             </div>
             <div class="text">
-                <p>Inden vi begyndte selve kodningsprocessen, fremstilledes et mock-up af både mobil- og web version af vores site i Adobe XD, så vi havde et defineret billede af, hvordan det endelige site skulle se ud. Dette mock-up konstruerede vi ud fra udleverede wireframe og et layoutdiagram. <br><br>
+                <p>Før påbegyndelsen af selve kodningsprocessen, er der fremstillet et mock-up af både mobil- og
+                    webversion af sitet i Adobe XD, så der er et defineret billede af udseendet på det endelige site.
+                    Dette mock-up er konstrueret ud fra udleverede wireframe og layoutdiagram.<br><br>
 
-                    Til selve kodningen af sitet, benyttede jeg Flexbox, da jeg ønskede, at mit site skulle være responsiv og dertil tilpassede sig forskellige skærmformater såsom web og mobil, ligesom det gjorde det nemmere at placere de forskellige elementer på den position, jeg ønskede. Herudover har jeg brugt media querys til forskellige skærmstørrelser med henblik på at gøre siden yderligere responsiv til diverse sider. Menuen på min originale side valgte jeg, at lave en fixed position menu, som derved forbliver i toppen af siden og samtidig følger med brugerens scroll i gennem sitet. Henimod slutningen af processen med sitet, valgte jeg, lege lidt med menu funktionen og kodede mig frem til en ‘burger’/dropdown menu. Det færdige produkt kan ses herunder.
+                    Til selve kodningen af sitet har jeg benyttet Flexbox med henblik på, at sitet skulle være responsivt og dertil tilpasse sig forskellige skærmformater såsom web og mobil. Ligesom det har gjort det
+                    nemmere at placere de forskellige elementer på den position, jeg har ønsket. Herudover har jeg
+                    brugt media querys til forskellige skærmstørrelser, med henblik på at gøre siden yderligere
+                    responsiv til diverse sider. Menuen på min originale side har jeg valgt at lave som en fixed position
+                    menu, som derved forbliver i toppen af siden og samtidig følger med brugerens scroll igennem
+                    sitet. Henimod slutningen af processen med sitet, valgte jeg at lege lidt med menufunktionen og
+                    kode mig frem til en ‘burger’/dropdown menu. Det færdige produkt kan ses herunder.
+
                 </p>
                 <div class="button"><a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2_kopi/index.html">Se version to af American magazine</a></div>
             </div>
