--- a/cv.html
+++ b/cv.html
@@ -43,7 +43,7 @@
                 <li><a href="ux.html">UX</a></li>
                 <li> <a href="ani.html">ANIMATION</a></li>
                 <li> <a href="content.html">INDHOLD</a></li>
-                <li> <a href="cv.html">CV</a></li>
+                <li> <a href="cv.html"><u>CV</u></a></li>
             </ul>
         </nav>
 
@@ -55,11 +55,7 @@
 
     <section id="cv">
         <img src="billeder/5.svg" alt="cv billede">
-        <!--
-        <div class="wrap">
-            <img src="http://image.flaticon.com/icons/svg/3/3907.svg" id="arrow" class="animated bounce" alt="pil">
-        </div>
--->
+
         <div class="col_top">
             <h2>CV</h2>
             <hr>
@@ -111,7 +107,11 @@
         </div>
         <div class="col_2">
             <div class="text_2">
-                <p>Jeg hedder Josefine og er 29 gammel. Jeg bor til daglig på Nørrebro med min kæreste, Kristoffer, og vores plastik stork, Jens Ole. Jeg er uddannet som makeup artist siden 2015 og har arbejdet med det i flere år, men måtte henad vejen erkende, at jeg følte et behov for at arbejde mere teknisk, og samtidig udfordre mig selv kreativt på denne front.
+                <p>Jeg er uddannet som makeup artist i 2015 og har arbejdet med makeup og styling gennem flere år.
+                    Henad vejen er det blevet tydeligt for mig, at jeg har skulle forfølge min store interesse for at
+
+                    arbejde teknisk og visuelt og bringe mine kreative kompetencer i spil i en anden retning. <br>Jeg er 29 år gammel og bor på
+                    Nørrebro med min kæreste, Kristoffer.
                 </p>
             </div>
         </div>
